[package]
name = "Track2Clip"
version = "0.1.0"
authors = ["Mark Monster <youremail@example.com>"]
edition = "2018"

[dependencies]
arboard = "3.4.1"
clap = { version = "4.0", features = ["derive"] }
git2 = "0.19.0"

[[bin]]
name = "track2clip"
path = "src/main.rs"  # Explicitly specify the path to the main.rs file
